# isaric-pipeline

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  synthgen.py
.github/workflows/: lint.yaml  test.yml
docs/: _config.yml  _toc.yml  conf.py  fhirflat.rst  index.md  resources.rst  resources_base.rst
docs/_static/: style.css
docs/_templates/: layout.html
docs/howto/: conversion-data.md  conversion-fhir.md
docs/spec/: fhirflat.md  isaric-fhir-extensions.rst  mapping.md
fhirflat/: __init__.py  __main__.py  fhir2flat.py  flat2fhir.py  ingest.py  util.py
fhirflat/resources/: __init__.py  base.py  condition.py  encounter.py  extension_types.py  extension_validators.py  extensions.py  immunization.py  location.py  medicationadministration.py  medicationstatement.py  observation.py  organization.py  patient.py  procedure.py  researchsubject.py  specimen.py
tests/: test_condition_resource.py  test_encounter_resource.py  test_extensions.py  test_fhir2flat_units.py  test_flat2fhir_units.py  test_immunization_resource.py  test_ingest.py  test_location_resource.py  test_medicationadministration_resource.py  test_medicationstatement_resource.py  test_observation_resource.py  test_organization_resource.py  test_patient_resource.py  test_procedure_resource.py  test_researchsubject_resource.py  test_resources.py  test_specimen_resource.py  test_utils.py
tests/bundle/: condition.parquet  encounter.parquet
tests/data/: condition_flat.parquet  condition_flat_missing_subject.parquet  encounter_flat.parquet  immunization_flat.parquet  location_flat.parquet  medicationadmin_flat.parquet  medicationstat_flat.parquet  multi_patient.parquet  multi_row_encounter_flat_errors.parquet  observation_flat.parquet  organization_flat.parquet  patient.ndjson  patient_ext_flat.parquet  patient_flat.parquet  procedure_flat.parquet  researchsubject_flat.parquet  specimen_flat.parquet
tests/dummy_data/: combined_dummy_data.csv  combined_dummy_data_error.csv  data_multirow_encounter.csv  data_multirow_encounter_error.csv  data_multirow_encounter_freetext.csv  data_multirow_encounter_freetext_maindiag.csv  data_multirow_encounter_freetext_secdiag.csv  encounter_dummy_data_multi.csv  encounter_dummy_data_multi_patient.csv  encounter_dummy_data_single.csv  encounter_dummy_mapping.csv  observation_dummy_mapping.csv  vital_signs_dummy_data.csv
tests/ingestion_output/: encounter.parquet  observation.parquet  patient.parquet
